--- a/2. Binary classification.ipynb
+++ b/2. Binary classification.ipynb
@@ -4,53 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://github.com/lmoroney/dlaicourse/blob/master/Course%202%20-%20Part%202%20-%20Lesson%202%20-%20Notebook.ipynb"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Load libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n",
-      "C:\\Users\\Mandeep\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "C:\\Users\\Mandeep\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "C:\\Users\\Mandeep\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "C:\\Users\\Mandeep\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "C:\\Users\\Mandeep\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "C:\\Users\\Mandeep\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "C:\\Users\\Mandeep\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "C:\\Users\\Mandeep\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "C:\\Users\\Mandeep\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "C:\\Users\\Mandeep\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "C:\\Users\\Mandeep\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "C:\\Users\\Mandeep\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+      "Collecting keras\n",
+      "  Using cached Keras-2.4.3-py2.py3-none-any.whl (36 kB)\n",
+      "Requirement already satisfied: scipy>=0.14 in /Users/netisheth/opt/anaconda3/lib/python3.8/site-packages (from keras) (1.5.0)\n",
+      "Requirement already satisfied: pyyaml in /Users/netisheth/opt/anaconda3/lib/python3.8/site-packages (from keras) (5.3.1)\n",
+      "Requirement already satisfied: numpy>=1.9.1 in /Users/netisheth/opt/anaconda3/lib/python3.8/site-packages (from keras) (1.18.5)\n",
+      "Requirement already satisfied: h5py in /Users/netisheth/opt/anaconda3/lib/python3.8/site-packages (from keras) (2.10.0)\n",
+      "Requirement already satisfied: six in /Users/netisheth/opt/anaconda3/lib/python3.8/site-packages (from h5py->keras) (1.15.0)\n",
+      "Installing collected packages: keras\n",
+      "Successfully installed keras-2.4.3\n"
      ]
     }
    ],
+   "source": [
+    "!pip install keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -1256,6 +1242,7 @@
     }
    ],
    "source": [
+    "# Create train test split with 20% of data in testing data\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=1)\n",
@@ -1267,26 +1254,6 @@
     "\n",
     "print('Shape of validation images: ', x_test.shape)\n",
     "print('Shape of validation labels: ', y_test.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "()"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_train[0].shape"
    ]
   },
   {
@@ -1320,6 +1287,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Pre-processing image with the help of image augmentation\n",
+    "\n",
     "train_datagen = ImageDataGenerator(rescale= 1./255, # Normalization.\n",
     "                                   rotation_range = 40,\n",
     "                                   width_shift_range = 0.2,\n",
@@ -1520,6 +1489,7 @@
     }
    ],
    "source": [
+    "# Evaluate model based on accuracy and f1_score\n",
     "from sklearn.metrics import accuracy_score, f1_score\n",
     "\n",
     "y_test_predict = model.predict_classes(x_test, verbose=0)\n",
@@ -1563,6 +1533,7 @@
     }
    ],
    "source": [
+    "# Plot training and validation accuracy and loss for the model epochs\n",
     "acc = history.history['accuracy']\n",
     "val_acc = history.history['val_accuracy']\n",
     "loss = history.history['loss']\n",
@@ -1614,6 +1585,8 @@
     }
    ],
    "source": [
+    "# Example prediction\n",
+    "\n",
     "classes = model.predict_classes(x_test, batch_size=10)\n",
     "print(classes[93])\n",
     "plt.imshow(x_test[93])\n",
@@ -1647,7 +1620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
