--- a/2. Multi class classification .ipynb
+++ b/2. Multi class classification .ipynb
@@ -102,18 +102,7 @@
     "        image_arr = cv2.cvtColor(image_arr, cv2.COLOR_BGR2RGB )\n",
     "        X.append(cv2.resize(image_arr ,  (width, height), interpolation=cv2.INTER_AREA))\n",
     "        Y.append(label)\n",
-    "    return X, Y\n",
-    "\n",
-    "       \n",
-    "\n",
-    "\n",
-    "\n",
-    "#cv2.imread(image, cv2.IMREAD_COLOR)\n",
-    "#cv2.IMREAD_COLOR\n",
-    "#cv2.cvtColor(img, cv2.COLOR_RGB2BGR)\n",
-    "#cv2.imread(image, cv2.IMREAD_UNCHANGED)\n",
-    "#cv2.imwrite(image, cv2.cvtColor(cv2.imread(image), cv2.COLOR_RGB2BGR))\n",
-    "#BGR2RGB"
+    "    return X, Y"
    ]
   },
   {
@@ -2338,7 +2327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
